[gd_scene load_steps=19 format=3 uid="uid://cjqinbb60vh6"]

[ext_resource type="Script" path="res://Enemies/enemy_frog.gd" id="1_42n7g"]
[ext_resource type="Texture2D" uid="uid://dg6jtka113eq1" path="res://Assets/Graphics/sprites/sprites_enemies.png" id="2_p5pto"]
[ext_resource type="AudioStream" uid="uid://c540h7dwrtb25" path="res://Assets/Sounds/sfx/frog_damage.wav" id="3_cr62m"]
[ext_resource type="AudioStream" uid="uid://0255vwcuk1kd" path="res://Assets/Sounds/sfx/frog_death.wav" id="4_nvevm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r68x5"]
atlas = ExtResource("2_p5pto")
region = Rect2(680, 381, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jnxg"]
atlas = ExtResource("2_p5pto")
region = Rect2(744, 381, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_74bdg"]
atlas = ExtResource("2_p5pto")
region = Rect2(808, 381, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwxfe"]
atlas = ExtResource("2_p5pto")
region = Rect2(680, 381, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b145r"]
atlas = ExtResource("2_p5pto")
region = Rect2(744, 381, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_88tfq"]
atlas = ExtResource("2_p5pto")
region = Rect2(872, 381, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_onrnv"]
atlas = ExtResource("2_p5pto")
region = Rect2(552, 381, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbq6r"]
atlas = ExtResource("2_p5pto")
region = Rect2(488, 381, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyjb7"]
atlas = ExtResource("2_p5pto")
region = Rect2(360, 381, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfuj1"]
atlas = ExtResource("2_p5pto")
region = Rect2(424, 381, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k477x"]
atlas = ExtResource("2_p5pto")
region = Rect2(616, 381, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5cx1g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r68x5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jnxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74bdg")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwxfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b145r")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88tfq")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbq6r")
}],
"loop": false,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyjb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfuj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k477x")
}],
"loop": true,
"name": &"standing",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4klqh"]
size = Vector2(24, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kt5p"]
size = Vector2(48, 28)

[node name="enemyFrog" type="CharacterBody2D" groups=["Persist", "enemies"]]
z_index = 1
texture_filter = 1
collision_layer = 0
script = ExtResource("1_42n7g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_5cx1g")
animation = &"standing"

[node name="AttackingTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="AttackedTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="DeadTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["enemies"]]
light_mask = 2
visibility_layer = 2
collision_layer = 6
collision_mask = 2
input_pickable = false
monitoring = false
monitorable = false

[node name="main_collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_4klqh")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_7kt5p")

[node name="particle_limiter" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cr62m")

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nvevm")
volume_db = 5.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(1, 1, 1, 0.0980392)
rect = Rect2(-500, -500, 1000, 1000)

[connection signal="timeout" from="AnimatedSprite2D/AttackingTimer" to="." method="_on_attacking_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/AttackedTimer" to="." method="_on_attacked_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/DeadTimer" to="." method="_on_dead_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="particle_limiter" to="." method="_on_particle_limiter_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="offScreen_load"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="offScreen_unload"]
